tests/core/snapshots/apollo-federation-entities.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "_entities": [
        {
          "__typename": "User",
          "id": 1,
          "name": "Leanne Graham"
        },
        {
          "__typename": "User",
          "id": 2,
          "name": "Ervin Howell"
        },
        {
          "__typename": "Post",
          "id": 3,
          "title": "post-title-3"
        },
        {
          "__typename": "Post",
          "id": 5,
          "title": "post-title-5"
        }
      ]
    }
  }
}
