tests/core/snapshots/apollo-federation-entities.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(enableFederation: true, port: 8000)
  @upstream(batch: {delay: 100, headers: []}, httpCache: 42)
  @link(src: "./posts.graphql", type: Config) {
  query: Query
}

scalar _Any

union _Entity = Post | User

type Post @expr(body: {id: "{{.value.id}}", title: "post-title-{{.value.id}}"}) @key(fields: "id") {
  id: Int!
  title: String!
}

type Query {
  """
  Apollo federation Query._entities resolver
  """
  _entities(representations: [_Any!]!): [_Entity]!
  """
  Apollo federation Query._service resolver
  """
  _service: _Service!
  user(id: Int!): User @http(url: "http://jsonplaceholder.typicode.com/users/{{.args.id}}")
}

type User @call(steps: [{query: "user", args: {id: "{{.value.id}}"}}]) @key(fields: "id") {
  id: Int!
  name: String!
}

type _Service {
  sdl: String
}
