tests/core/snapshots/apollo-federation-validation.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Invalid key at index 0: 'blogId' is not a field of 'Blog'",
    "trace": [
      "Blog"
    ],
    "description": null
  },
  {
    "message": "Invalid key at index 1: 'userId' is not a field of 'Blog'",
    "trace": [
      "User"
    ],
    "description": null
  }
]
