tests/core/snapshots/async-cache-disabled.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(port: 8000, queryValidation: false) @upstream @link(src: "config.yml", type: Config) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  posts: Post @http(url: "http://jsonplaceholder.typicode.com/post?id=1")
}

type User {
  id: Int
  name: String
}
