tests/core/snapshots/async-cache-enable-multiple-resolvers.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "user": {
            "name": "Leanne Graham"
          },
          "taggedUsers": [
            {},
            {}
          ]
        },
        {
          "user": {
            "name": "Leanne Graham"
          },
          "taggedUsers": [
            {},
            {}
          ]
        }
      ]
    }
  }
}
