tests/core/snapshots/async-cache-enable-multiple-resolvers.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  body: String
  id: Int!
  taggedUsers: [User]
  title: String
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
